<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".MainActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.439" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="@string/LoginPageMessage" android:id="@+id/LoginPageTopMessage"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.104" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/EditEmailText" app:layout_constraintTop_toBottomOf="@+id/LoginPageTopMessage" android:inputType="textEmailAddress" android:hint="@string/EmailHint" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/EditPasswordText" app:layout_constraintTop_toBottomOf="@+id/EditEmailText" android:inputType="textPassword" android:hint="@string/PasswordHint" android:ems="10" android:layout_marginTop="28dp"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.087" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="@string/LoginButtonName" android:id="@+id/LoginButton" app:layout_constraintTop_toBottomOf="@+id/RegisterText"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.153" app:layout_constraintTop_toTopOf="@+id/LoginPageTopMessage" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:text="@string/ErrorLoginPageMessage" android:id="@+id/ErrorLoginMessage" android:layout_marginTop="24dp" app:layout_constraintBottom_toTopOf="@+id/EditEmailText" android:visibility="invisible" android:textColor="@android:color/holo_red_dark"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.038" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Click Here To Register" android:id="@+id/RegisterText" app:layout_constraintTop_toBottomOf="@+id/EditPasswordText" android:layout_marginTop="16dp" android:textColor="#2196F3" android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>