<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".RegisterActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@id/userNameText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.491" app:layout_constraintEnd_toEndOf="parent" android:text="@string/EmailHint" android:layout_marginTop="76dp" android:id="@+id/EmailText"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:text="@string/UserNameHint" android:layout_marginTop="104dp" android:id="@+id/userNameText" app:layout_constraintTop_toTopOf="parent"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/editEmailText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.491" app:layout_constraintEnd_toEndOf="parent" android:text="@string/PasswordHint" android:layout_marginTop="12dp" android:id="@+id/textPasswordView"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/userNameText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent" android:text="@string/UserNameHint" android:layout_marginTop="16dp" android:id="@+id/editUserNameText" android:inputType="textPersonName" android:ems="10" android:layout_marginRight="99dp" android:layout_marginEnd="99dp" android:layout_marginLeft="99dp" android:layout_marginStart="99dp"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textPasswordView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp" android:id="@+id/editPasswordText" android:inputType="textPassword" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/EmailText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:text="@string/EmailHint" android:layout_marginTop="24dp" android:id="@+id/editEmailText" android:inputType="textEmailAddress" android:ems="10"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/editPasswordText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent" android:text="Register" android:id="@+id/RegisterButton" app:layout_constraintVertical_bias="0.133" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="176dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>